--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -440,6 +440,28 @@
                                     <blockquote>
                                         <p>Fuente: UNAM (2016) & IPN(2015) ------>Autores corporativos
                                             Elaboración propia.</p>
+
+                                        <p>10 fundamentos para ganar masa muscular que necesitas respetar. (2022, 14
+                                            enero). Masa muscular <q>[Comentario sobre el artículo “10 fundamentos para
+                                                ganar masa muscular que necesitas respetar”]. Mens Health. </q>
+                                            <cite>---- Ryan Reynolds </cite>
+
+                                            <a href="//www.menshealth.com/es/fitness/a38344331/ganar-musculo-10-fundamentos/"
+                                                target="_blank">//www.menshealth.com/es/fitness/a38344331/ganar-musculo-10-fundamentos/</a>
+                                        </p>
+
+                                        <p>CÓMO HACER UN CICLO DE VOLUMEN LIMPIO | GUÍA COMPLETA 2020 <q>GANAR MASA
+                                                MUSCULAR ES PROBABLEMENTE UNO DE LOS TEMAS MÁS POPULARES Y BUSCADOS EN
+                                                INTERNET DENTRO DE LA COMUNIDAD FITNESS Y AUNQUE EN LOS ÚLTIMOS 20 AÑOS
+                                                SE HAYAN PUBLICADO
+                                            </q>
+                                            <cite>----BASTIAN ALMARAZ</cite>
+
+                                            <a href="https://www.legionarioselite.com/blog-fitness/"
+                                                target="_blank">https://www.legionarioselite.com/blog-fitness/</a>
+
+
+                                        </p>
                                     </blockquote>
                                     <!-- fin bibliografía -->
                                 </footer>
