--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -304,6 +304,197 @@
 
 
                             </footer>
+
+                            <!-- inicia entrada: nombre_del_artículo -->
+                            <article>
+                                <header>
+                                    <hgroup>
+                                        <!-- Título del artículo con ícono -->
+                                        <h2> <img src="assets/images/investigacion-de-mercado.png" alt="invest"
+                                                height="35px" width="auto"> Investigación</h2>
+                                        <!-- Fecha en la que se escribió el artículo -->
+                                        <h4>14/01/21</h4>
+                                    </hgroup>
+                                </header>
+                                <!-- inicia contenido del artículo -->
+                                <div>
+
+                                    <strong>
+                                        <h3> ¿Perder grasa y ganar musculo?</h3>
+                                    </strong>
+
+                                    <p>Nuestra apariencia física depende principalmente de nuestros porcentajes de grasa
+                                        corporal y masa muscular. Disminuyendo nuestro porcentaje de grasa, se puede
+                                        ayudar a prevenir cientos de enfermedades, reduciendo la inflamación celular y
+                                        mejorando nuestra masa muscular, lo que ayuda a fortalecer el sistema inmune y
+                                        mejorar nuestro metabolismo.
+
+                                        Pongamos un ejemplo: Tenemos 2 personas de sexo femenino que pesan 65 kilogramos
+                                        (kg) y ambas miden 1.60 metros, visualmente la primera es más delgada y se
+                                        pueden ver sus músculos tonificados, ya que tiene 14% de grasa corporal. La
+                                        segunda persona se ve más robusta, pero tiene un 30% de grasa. A niveles de
+                                        composición se considera más sano la persona con menor porcentaje de grasa,
+                                        aunque ambos pesen 65 kg. Para mejorar esto de una manera equitativa utilizamos
+                                        la recomposición corporal.
+
+                                        La recomposición corporal es un método en el que podemos reducir nuestro
+                                        porcentaje de grasa y construir masa muscular al mismo tiempo. Cabe destacar que
+                                        no es posible a grandes cantidades y esta etapa es a largo plazo.
+
+                                        Ciertamente para ganar masa muscular se debe estar en un superávit calórico y
+                                        para perder grasa corporal, habría que estar en un déficit calórico. Para poder
+                                        lograr este “recomp” se deben de utilizar ciertas estrategias y hay personas a
+                                        las que se les facilita más.
+                                    </p>
+
+                                    <strong>
+                                        <h4>Consideraciones</h4>
+                                    </strong>
+
+                                    <p>La composición corporal es algo mucho más complejo de lo que nos afirma una
+                                        simple balanza, algo que debería abordar desde niños, asumiendo un control y
+                                        plan adecuado.
+
+                                        Para esto debemos discriminar primero dos principales tejidos, el adiposo y el
+                                        muscular, enormemente influyentes en la calidad de vida de la persona.
+
+                                        Para mejorar nuestra evaluación de la composición corporal es importante
+                                        desestimar la altura, por otro lado, jamás va a ser lo mismo una persona con
+                                        83kg y un porcentaje de tejido adiposo del 31%, comparado a una persona del
+                                        mismo peso, pero con un porcentaje del 43%. Claramente la segunda posee mayores
+                                        riesgos cardio-metabólicos y fisiológicos que la primera.
+
+                                        Pese a esto a lo largo de los años el tejido adiposo a sido el actor principal.
+                                        La mayoría de los profesionales que obtienen datos antropométricos siempre
+                                        valoraron el tejido graso como principal componente de importancia, cuando la
+                                        relación que existe entre tejido adiposo y muscular es muy cercana.
+                                    </p>
+
+                                    <label>Las perosnas que si lo logran (mas del ochenta porciento), tienen una gran
+                                        motivación pues tienen mejores resultados
+                                    </label>
+                                    <p><meter min="0" max="100" value="80"></meter></p>
+
+
+                                    <strong>
+                                        <h5>¿Como llevar esta etapa?</h5>
+                                    </strong>
+                                    <p>
+                                        Durante esta etapa se deben consumir las calorías basales y si existe un
+                                        sobrepeso se debe hacer un déficit calórico no mayor al 20%, con un incremento
+                                        en la ingesta proteíca y evitando alimentos procesados.
+
+                                        La actividad física debe ser constante y combinando entrenamientos de
+                                        resistencia con progresión de cargas y ejercicio cardiovascular de baja
+                                        intensidad prolongado, para así, no comprometer la recuperación.
+
+                                        Cómo en cualquier etapa, el descanso suficiente es importante para una
+                                        recuperación efectiva. Dormir suficiente impide que el cortisol aumente y que la
+                                        testosterona baje.
+
+                                        Por último, este método es una herramienta que se debe ajustar a los objetivos
+                                        de cada individuo, tomando en cuenta el tiempo que lleva con un plan alimenticio
+                                        y sus necesidades fisiológicas.</p>
+
+                                    <label>La mayoria de personas que comienzan su vida fitness, llevan acabo la
+                                        recomposición corporal sin que ellos se den cuenta.
+                                    </label>
+                                    <p><meter min="0" max="100" value="95"></meter></p>
+
+
+
+
+                                    <!-- inicia ilustración del artículo -->
+                                    <figure>
+                                        <img src="assets/images/el peso no lo es todo.png" alt="ilustracion 1º artículo"
+                                            height="600px" width="auto">
+                                        <figcaption>Muchas veces siempre vemos nos dejamos llevar por el peso corpral
+                                            pues pensamos que existe "un peso ideal" y la verdad es que no es asi,
+                                            siempre es mejor tomarnos fotos durante todo el progreso para saber si vamos
+                                            por buen camino. Esta es una de las mejores maneras de ver tu progreso.
+                                        </figcaption>
+                                    </figure>
+                                    <!-- termina ilustración del artículo -->
+
+                                </div>
+                                <!-- Termina contenido del artículo -->
+
+                                <footer>
+                                    <!-- Datos del autor -->
+                                    <div>
+                                        <span>Flores Colin Luis Jesus</span> <a
+                                            href="https://www.instagram.com/luiss.rawrr/?hl=es-la"
+                                            target="_blank">@luiss.rawrr en instagram</a>
+                                    </div>
+                                    <!-- fin datos del autor -->
+                                    <!-- bibliografía -->
+                                    <blockquote>
+                                        <p>Fuente: UNAM (2016) & IPN(2015) ------>Autores corporativos
+                                            Elaboración propia.</p>
+
+                                        <p>10 fundamentos para ganar masa muscular que necesitas respetar. (2022, 14
+                                            enero). Masa muscular <q>[Comentario sobre el artículo “10 fundamentos para
+                                                ganar masa muscular que necesitas respetar”]. Mens Health. </q>
+                                            <cite>---- Ryan Reynolds </cite>
+
+                                            <a href="//www.menshealth.com/es/fitness/a38344331/ganar-musculo-10-fundamentos/"
+                                                target="_blank">//www.menshealth.com/es/fitness/a38344331/ganar-musculo-10-fundamentos/</a>
+                                        </p>
+
+                                        <p>CÓMO HACER UN CICLO DE VOLUMEN LIMPIO | GUÍA COMPLETA 2020 <q>GANAR MASA
+                                                MUSCULAR ES PROBABLEMENTE UNO DE LOS TEMAS MÁS POPULARES Y BUSCADOS EN
+                                                INTERNET DENTRO DE LA COMUNIDAD FITNESS Y AUNQUE EN LOS ÚLTIMOS 20 AÑOS
+                                                SE HAYAN PUBLICADO
+                                            </q>
+                                            <cite>----BASTIAN ALMARAZ</cite>
+
+                                            <a href="https://www.legionarioselite.com/blog-fitness/"
+                                                target="_blank">https://www.legionarioselite.com/blog-fitness/</a>
+
+
+                                        </p>
+
+                                        <p>Composición Corporal y su correcta evaluación<q>Formas actuales de evaluar
+                                                erróneamente la composición corporal
+                                            </q>
+                                            <cite>----Juan C. Aristizábal, Maria Restrepo, Alejandro Estrada (2007).
+                                            </cite>
+
+                                            <a href="https://mundoentrenamiento.com/composicion-corporal/"
+                                                target="_blank">https://mundoentrenamiento.com/composicion-corporal/</a>
+
+
+                                        </p>
+
+
+                                    </blockquote>
+                                    <!-- fin bibliografía -->
+                                </footer>
+                            </article>
+
+
+
+
+
+                </article>
+
+
+                <!-- fin entrada: nombre_del_artículo -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </article>
 
                 <!-- fin entrada: nombre_del_artículo -->
