--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -532,12 +532,172 @@
                             </article>
 
 
+                            <!-- inicia entrada: nombre_del_artículo -->
+                            <article>
+                                <header>
+                                    <hgroup>
+                                        <!-- Título del artículo con ícono -->
+                                        <h2> <img src="assets/images/investigacion-de-mercado (1).png" alt="invest"
+                                                height="35px" width="auto">¿Falta de Motivación o Disciplina?</h2>
+                                        <!-- Fecha en la que se escribió el artículo -->
+                                        <h4>23/03/22</h4>
+                                    </hgroup>
+                                </header>
+                                <!-- inicia contenido del artículo -->
+                                <div>
+
+                                    <strong>
+                                        <h3>¿Motivación o Disciplina?</h3>
+                                    </strong>
+
+                                    <p>
+
+                                        ¿Ya haz alcanzado tu primer año en el gimnasio? seguramente te este costando más
+                                        trabajo levantarte de la cama para ir al gimnasio y continuar haciendo las cosas
+                                        bien ya sabes; un buen régimen alimenticio, un buen tiempo de sueño y un bien
+                                        entrenamiento. Pasado este punto puede que te cuestiones si en verdad vale la
+                                        pena
+                                        continuar con este cambio y es que muchas veces nos lo hemos preguntado pues al
+                                        adentrarnos mas en el camino del fitness, nos damos cuenta de la realidad y es
+                                        que para obtener buenos resultados hace falta de por lo menos dos años de hacer
+                                        las cosas bien, y muchas veces no estamos dispuestos a seguir en este camino
+                                        pues la falta de disciplina
+                                        hace que queramos salirnos de la marcha y dejar todo por lo que emos luchado. A
+                                        este punto te preguntes que rayos es la disciplina. La disciplina es una virtud
+                                        que nos hace hacer las cosas que debemos de hacer pero no queremos, por ejemplo
+                                        levantarte a las cinco de la mañana para empezar el dia, o dormirse temprano y
+                                        dejar de lado las distracciones.
+                                        Cuando comenzamos este proceso soliamos ver videos motivacionales donde de
+                                        alguna forma nos llevaban a sacar nuestro maximo potencial, pero al pasar el
+                                        tiempo te das cuenta que toda la vida no podrás hacer esto y si o si necesitas
+                                        de disciplina para tener las riendas de tu vida. Lo se es algo que dificilmente
+                                        aceptaremos, pero siempre hay que recordar
+                                        como estabamos antes de empezar en esto y como queremos terminar.
+                                    </p>
+
+                                    <strong>
+                                        <h4>¿La constancia es la clave dele exito?</h4>
+                                    </strong>
+
+                                    <p>
+                                        Todo el mundo ha escuchado esta frase «La constancia es la clave del éxito» en
+                                        algún momento y, en el deporte, no es la excepción. Entrenar constantemente
+                                        diferentes grupos musculares y de diferentes formas, nos ayudará a conseguir
+                                        nuestros objetivos y a crear una disciplina que puede ser aplicada a diversos
+                                        ámbitos de nuestra vida diaria.
+                                        El principal problema para conseguirlo suele ser la falta de motivación. No
+                                        tener una motivación suficiente para levantarnos temprano para entrenar, hacerlo
+                                        por las noches al acabar nuestras actividades diarias o en el horario de
+                                        mediodía, puede suponer faltar al entrenamiento durante unos días, semanas o
+                                        incluso llegar a desertar.
+
+                                        Otro problema suele ser el “no tengo tiempo” y la falta de ganas. Has de
+                                        vencerlos con técnicas motivacionales para no faltar. Piensa en todo lo que
+                                        ganas al realizar ejercicio y lo que pierdes al no hacerlo. Lo cierto es que si
+                                        no dedicas tiempo a tu salud, en el futuro tendrás que dedicar tiempo a la
+                                        enfermedad.
+                                    </p>
 
 
-                </article>
+                                    <strong>
+                                        <h5>Tips para asumir un estilo de vida fitness, sustentado en la disciplina</h5>
+                                    </strong>
+                                    <p>
+                                        Esforzarse para mantenernos fit nos trae alimentación saludable, bajar de peso,
+                                        mayor salud, relajación, disminuir el estrés, mejorar la tensión y los latidos
+                                        del corazón, ampliar la capacidad pulmonar y, en líneas generales, un mayor
+                                        bienestar que mejora la autoestima, incide en una mayor concentración y enfoque
+                                        para tus metas y sueños.
+
+                                        La motivación es el impulso para lograr la meta, pero con los días se va y la
+                                        disciplina al asumir el compromiso es lo único que te mantiene, lo que te dará
+                                        resultados muy productivos. De esta manera vas a poder mantenerte en el tiempo
+                                        con tus metas, es el motor que se activa verdaderamente cuando buscas lo que
+                                        quieres, lo que eso significa para ti.
+
+                                        Mantener la disciplina es ir al gimnasio a la misma hora todos los días. Al
+                                        hacer esto, el cuerpo empieza a reaccionar y alistarse cuando sabe que está
+                                        llegando la hora. Levantarse todos los días a la misma hora y cuando suena
+                                        disponerse para hacer esa actividad física que has seleccionado. Existen
+                                        estudios que reflejan que las personas con autocontrol que siguen su
+                                        planificación con rigor, son más felices, ya que toman decisiones equilibradas
+                                        y, por ende, se sienten más satisfechos con sus vidas.
 
 
-                <!-- fin entrada: nombre_del_artículo -->
+                                    </p>
+
+                                    <label>Menos de la mitad de personas consiguen el cuerpo de sus sueños por falta de
+                                        "motivación" </label>
+                                    <p><meter min="0" max="100" value="40"></meter></p>
+
+
+                                    <label>Las personas que si lo logran, llegan a vivir en mejores calidad y con mayor
+                                        salud</label>
+                                    <p><meter min="0" max="100" value="50"></meter></p>
+
+
+
+                                    <!-- inicia ilustración del artículo -->
+                                    <figure class="ilustracion">
+                                        <figcaption> (video)</figcaption>
+
+
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/6Q5V-hpfSpk"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+
+
+
+
+                                    </figure>
+                                    <!-- termina ilustración del artículo -->
+
+                                </div>
+                                <!-- Termina contenido del artículo -->
+
+                                <footer>
+                                    <!-- Datos del autor -->
+                                    <div>
+                                        <span>Flores Colin Luis Jesus</span> <a
+                                            href="https://www.instagram.com/luiss.rawrr/?hl=es-la"
+                                            target="_blank">@luiss.rawrr en instagram</a>
+                                    </div>
+                                    <!-- fin datos del autor -->
+                                    <!-- bibliografía -->
+                                    <blockquote>
+                                        <p>Fuente: UNAM (2016) & IPN(2015) ------>Autores corporativos
+                                            Elaboración propia.</p>
+
+                                        <p>¿LA CONSTANCIA ES LA CLAVE DEL EXITO? CONSEJOS PARA SER MÁS DISCIPLINADO
+                                            <q>[Comentario sobre el artículo “Como ser más disciplinado”]. Fitness
+                                                Coaching. </q>
+                                            <cite>---- Javier </cite>
+
+                                            <a href="https://jgonzalez-fitnesscoaching.com/la-constancia-la-clave-del-exito/"
+                                                target="_blank">//https://jgonzalez-fitnesscoaching.com/la-constancia-la-clave-del-exito//</a>
+                                        </p>
+
+                                        <p>Tips para asumir un estilo de vida fitness, sustentado en la disciplina<q>
+                                            </q>
+                                            <cite>----Ana Trendy</cite>
+
+                                            <a href="https://www.cambio16.com/tips-para-estilo-de-vida-fitness-disciplina/"
+                                                target="_blank">https://www.cambio16.com/tips-para-estilo-de-vida-fitness-disciplina/</a>
+
+
+                                        </p>
+                                    </blockquote>
+                                    <!-- fin bibliografía -->
+                                </footer>
+
+
+
+
+                            </article>
+
+
+                            <!-- fin entrada: nombre_del_artículo -->
             </main>
             <!-- termina contenido principal -->
 
