--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -409,7 +409,7 @@
                                     <figure>
                                         <img src="assets/images/el peso no lo es todo.png" alt="ilustracion 1º artículo"
                                             height="600px" width="auto">
-                                        <figcaption>Muchas veces siempre vemos nos dejamos llevar por el peso corpral
+                                        <figcaption>Muchas veces siempre vemos nos dejamos llevar por el peso corporal
                                             pues pensamos que existe "un peso ideal" y la verdad es que no es asi,
                                             siempre es mejor tomarnos fotos durante todo el progreso para saber si vamos
                                             por buen camino. Esta es una de las mejores maneras de ver tu progreso.
