--- a/masa_muscular.html
+++ b/masa_muscular.html
@@ -703,7 +703,52 @@
 
             <!-- empieza barra lateral -->
             <aside>
+                <h2>Microblogging</h2>
 
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>Seguramente en este proceso te encontraras buenas y malas personas, una de ellas precisamente
+                        son los "entrenadores", que en realidad buscan estafarte
+                        y hacerte perder tu dinero, pues es gente que no sabe de lo que habla y directamente se
+                        presentan como "coach", sin si quiera tener un titulo.
+                    </span>
+                </div>
+                <!-- termina entrada de mircoblogging -->
+
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>Otra cosa a priorizar en el gimnasio son el cuidado de nuestras articulaciones, pues muchas
+                        veces queremos levantar más peso del que podemos para vernos "mejor" pero
+                        lo unico que lograremos sera conseguir una bonita lesión que solo nos retrasara de nuestra meta.
+                    </span>
+                </div>
+                <!-- termina entrada de mircoblogging -->
+
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>Siempre que estemos haciendo cualquier ejercicio, debemos priorizar la tecnica antes que nada,
+                        pues si no la hacemos bien, ademas de vernos como tontos nos lastimaremos. Y una buena tecnica
+                        no solo reduce lesiones sino que da un mejor estimulo al musculo que estemos trabajando.
+                    </span>
+                </div>
+
+                <div>
+                    <span>Algo super fundamental que debemos de aprender es no buscar la perfección, no me mal entiendas
+                        no te digo que no te esfuerces, pero simplemente nunca vas a conseguir la perfección y eso
+                        te llevara problemas serios como la ira, ansiedad entre otros.
+
+                    </span>
+                </div>
+
+                <div><span>Por supuesto que tambien debemos de saber que tener resultados lleva mucho tiempo, y cuando
+                        digo tiempo en verdad es mucho tiempo pues si solo nos enfocamos en cuando veremos resultados
+                        muy probablemente no
+                        los consigamos. Solo por estar aflijidos a tener resultados que son imposibles de tener en un
+                        par de meses.
+                    </span>
+
+                </div>
+                <!-- termina entrada de mircoblogging -->
             </aside>
             <!-- termina barra lateral -->
 
@@ -715,7 +760,7 @@
 
                 <div>
                     <span> Blog creado en Preparatoria Up</span>
-                    <span>Las opiniones contenidas en este proyecto pertencen a los autores de cada entrada</span>
+                    <span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada</span>
                 </div>
 
                 <div>
