--- a/recomposición_corporal.html
+++ b/recomposición_corporal.html
@@ -575,6 +575,53 @@
 
             <!-- empieza barra lateral -->
             <aside>
+                <h2>Microblogging</h2>
+
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>Cuando pensamos en porque no progresamos más siempre se nos viene a la cabeza la rutina,
+                        creemos que es el principal factor pero en realidad
+                        lo que muchas veces impide que progresemos es nuestra alimentación y nuestros horarios para
+                        dormir. Ya que siempre solemos descuidar esta ultima parte.
+                    </span>
+                </div>
+                <!-- termina entrada de mircoblogging -->
+
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>No hay que creer todo lo que vemos en redes me explico; cuando vemos a estos sujetos que
+                        tienen fisicos descomunales siempre pensamos que podemos ponermos iguales
+                        a ellos pero esto no es así, la mayoria de gente con esos cuerpos ha consumido esteroides por
+                        mucho tiempo; haciendo que tenga un cuerpo así.
+                    </span>
+                </div>
+                <!-- termina entrada de mircoblogging -->
+
+                <!--  entrada de mircoblogging -->
+                <div>
+                    <span>Siempre hay que buscar ser mejores que ayer, y lo se esto parece una tipica frase cliche
+                        motivacional, pero la verdad es que si nos hacemos mejores que nuestra versión del día pasado
+                        lograremos alcanzar aquellas metas que parecian imposibles de conseguir.
+                    </span>
+                </div>
+
+                <div><span>Nunca debemos debemos de pensar que hay alimentos bueno o malos me explico; estamos
+                        acostumbrados a creer que el pan engorda, que no podemos comer frutas despues de las seis
+                        de la tarde entre otros mitos, pero la realidad es que siempre y cuando comamos con moderación
+                        no habrá de que preocuparse.
+                    </span>
+                </div>
+
+                <div>
+                    <span>
+                        Quiza en algun punto te llegue a faltar motivación para seguir adelante pero no te preocupes,
+                        esta es una etapa normal solo que hay que saberla afrontar para no caer. ¿Y como lo podemos
+                        lograr?
+                        facil; aferrarnos a nuestra meta, recordar porque empezamos en esto y lo más importante: la
+                        disciplina, la mejor amiga que nos ayudara en este camino y en cualquier otro.
+                    </span>
+                </div>
+                <!-- termina entrada de mircoblogging -->
 
             </aside>
             <!-- termina barra lateral -->
