@eval: evaluación de segunda vuelta

--- a/eval.html
+++ b/eval.html
@@ -175,3 +175,18 @@ Comentarios: Olvidaste hacer push a este PAE, por tu excelente trabajo en los PA
 ------------------------------------------------->
 <!-- Calificación: 6 pts de 6       -->
 <!------------------------------------------------->
+
+<!-- ---- @sergiortellez | 10 junio ----  --
+    Evaluación examen 2ª vuelta:
+    
+    *  Ibas perfilado para tener 10 perfecto pero no cerraste bien. 
+    *  El blog no es responsivo
+    * El microblogging no tiene el formato correcto
+    * La barra de navegación funciona pero no se presenta correctamente. 
+    *  Los PAES 9 y 10 los hiciste al aventón
+
+
+Te felicito, eres un excelente programador. Trata de enfocar tus habilidades siempre para el bien de todos. Termina los procesos que empiezas, espero que un día te comuniques conmigo para enseñarme que terminaste hasta el PAE 12    
+
+   Calificación: 8
+--  ----      fin       ----      -->
